--- a/apppolizas/templates/master/masteradmin.html
+++ b/apppolizas/templates/master/masteradmin.html
@@ -95,7 +95,9 @@
       </div>
     </div>
 
-    {% block admin_content %}{% endblock %}
+    <div class="admin-scroll-content">
+      {% block admin_content %}{% endblock %}
+    </div>
   </main>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
